--- a/bevestiging.html
+++ b/bevestiging.html
@@ -11,7 +11,7 @@
     <!-- Mobile Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Most important SEO tag -->
-    <title>ND</title>
+    <title>ND-contact</title>
     <!-- Other SEO friendly tags -->
     <meta name="description" content="Dit is de het prototype van de website van Noa Dekocker.">
     <meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
@@ -87,88 +87,29 @@
         </div>
     </div>
 
+
+
     <div class="sf-grid__wrapper">
         <div class="sf-grid__container">
             <div class="sf-grid__row">
                 <div class="sf-grid__column-xxsm-12">
 
-                    <article>
-                        <h2 class="verplaats">Portfolio</h2>
+                    <article class="logo_bevestiging">
+                        <h2 class="centreer">Bedankt om contact op te nemen met ND. Wij antwoorden <br> zo snel mogelijk op al onze mails.</h2>
+                        <img src="assets/images/logo_geel.png" height="300px" class="logo_geel"> <br>
+                        <a href="contact.html"><button type="button" class="knop" id="knop_kleur"> <span>Vorige pagina</span><i class="fa fa-angle-left" aria-hidden="true"></i> </button></a>
                     </article>
-
                 </div>
-
-                <div class="sf-grid__column-xxsm-4">
-
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/exploderende_letter.png" alt="brand" height="310">
-                        <a href="portfolio_letter.html"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/Affiche4geel-A2_vierkant.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/dobber" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/eindvoorstel_vierkant.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-
-                </div>
-
-                <div class="sf-grid__column-xxsm-4">
-
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/header_ommegang_vierkant.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/logo_dier.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/logo_ND.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/logo_ommegang.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-
-                </div>
-
-                <div class="sf-grid__column-xxsm-4">
-
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/postkaart_vierkant" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/technischefiche_vierkant.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/Aa_DekockerNoa_Cover.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-                    <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/deksel_vierkant.png" alt="brand" height="310">
-                        <a href="#"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
-                    </figure>
-
-                </div>
-
             </div>
         </div>
     </div>
 
+    <!--footer-->
     <div class="sf-grid__wrapper footer_wrapper">
         <div class="sf-grid__container">
             <div class="sf-grid__row">
                 <div class="sf-grid__column-xxsm-12">
+
                     <footer class="footer">
                         <div>
 
@@ -193,11 +134,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
 
 </body>
 
