--- a/contact.html
+++ b/contact.html
@@ -167,30 +167,30 @@
             </div>
         </div>
 
-        <div class="sf-grid__wrapper">
+        <div class="sf-grid__wrapper geel_vak">
         <div class="sf-grid__container">
             <div class="sf-grid__row">
                     <div class="sf-grid__column-4">
                         <article class="kader_diensten" id="rand">
-                            <a href="diensten.html"><img class="icoon_dienst" src="assets/icons/brand_icoon.png" alt="brand" height="80"><br></a>
-                            <a href="diensten.html"><h3>Brand</h3> <br></a>
-                            <p>ND design vertaalt uw ideeën naar een logo, een aantrekkelijk visitekaartje, of een volledige
+                            <a href="diensten.html"><img class="icoon_dienst" src="assets/icons/brand_icoon_wit.png" alt="brand" height="70"><br></a>
+                            <a href="diensten.html"><h3 id="wit">Brand</h3> <br></a>
+                            <p id="wit">ND design vertaalt uw ideeën naar een logo, een aantrekkelijk visitekaartje, of een volledige
                                 huisstijl.</p>
 
                         </article>
                     </div>
                     <div class="sf-grid__column-4">
                         <article class="kader_diensten" id="rand">
-                            <a href="diensten.html"><img class="icoon_dienst" src="assets/icons/Webdesign_icoon.png" alt="web" height="80"><br></a>
-                            <a href="diensten.html"><h3>Web</h3> <br></a>
-                            <p>ND biedt een volledig digitale communicatie oplossing aan voor alle soorten en maten.</p>
+                            <a href="diensten.html"><img class="icoon_dienst" src="assets/icons/webdesign_icoon_wit.png" alt="web" height="70"><br></a>
+                            <a href="diensten.html"><h3 id="wit">Web</h3> <br></a>
+                            <p id="wit">ND biedt een volledig digitale communicatie oplossing aan voor alle soorten en maten.</p>
                         </article>
                     </div>
                     <div class="sf-grid__column-4">
                         <article class="kader_diensten">
-                            <a href="diensten.html"><img class="icoon_dienst" src="assets/icons/design_icoon.png" alt="design" height="80"> <br></a>
-                            <a href="diensten.html"><h3>Design</h3> <br></a>
-                            <p>ND zorgt voor de best ontworpen gedrukte publicatie.</p>
+                            <a href="diensten.html"><img class="icoon_dienst" src="assets/icons/design_icoon_wit.png" alt="design" height="70"> <br></a>
+                            <a href="diensten.html"><h3 id="wit">Design</h3> <br></a>
+                            <p id="wit">ND zorgt voor de best ontworpen gedrukte publicatie.</p>
                         </article>
                     </div>
                 </div>
