--- a/portfolio_header.html
+++ b/portfolio_header.html
@@ -98,8 +98,9 @@
                     <article class="centreer">
                         <h2 class="centreer">Header ommegang</h2>
                         <img src="assets/images/Portfolio_webdesign/header_ommegang.png" alt="portfolio item" width="100%">
+                        <img src="assets/images/Portfolio_webdesign/ommegang_banner.png" alt="portfolio item" width="100%">
 
-                        <p class="centreer">Dit is een omslagfoto gemaakt voor de ommegang van de Chiro.</p>
+                        <p class="centreer">Dit is een omslagfoto en een banner gemaakt voor de ommegang van de Chiro.</p>
                         <br>
                         <a href="portfolio_letter.html"><button type="button" class="knop" id="knop_kleur"> <span>Vorige</span><i class="fa fa-angle-left" aria-hidden="true"></i> </button></a>
                         <a href="portfolio_postkaart.html"><button type="button" class="knop" id="knop_kleur"> <span>Volgende</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
