--- a/portfolio.html
+++ b/portfolio.html
@@ -109,11 +109,11 @@
                         <a href="portfolio_affichedobber.html"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
                     </figure>
                     <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/dobber" alt="portfolio item" height="310">
+                        <img src="assets/images/Portfolio_webdesign/dobber.jpg" alt="portfolio item" height="310">
                         <a href="portfolio_dobber.html"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
                     </figure>
                     <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/eindvoorstel_vierkant.png" alt="portfolio item" height="310">
+                        <img src="assets/images/Portfolio_webdesign/eindvoorstel_vierkant.jpg" alt="portfolio item" height="310">
                         <a href="portfolio_eindvoorstel.html"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
                     </figure>
 
@@ -151,7 +151,7 @@
                         <a href="portfolio_fiche.html"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
                     </figure>
                     <figure class="portfolio">
-                        <img src="assets/images/Portfolio_webdesign/Aa_DekockerNoa_Cover.png" alt="portfolio item" height="310">
+                        <img src="assets/images/Portfolio_webdesign/Aa_DekockerNoa_Cover.jpg" alt="portfolio item" height="310">
                         <a href="portfolio_cover.html"><button type="button" class="knop"> <span>Ontdek meer</span><i class="fa fa-angle-right" aria-hidden="true"></i> </button></a>
                     </figure>
                     <figure class="portfolio">
@@ -178,13 +178,14 @@
                                 <span><i class="fa fa-map-marker" aria-hidden="true"></i>Nieuwstraat 22, 8792 Desselgem </span>
 
 
-                                <span> <a href="contact.html"> <button type="button" class="knop"> <span>Contact</span><i class="fa fa-mobile"
-                                    aria-hidden="true"></i> </button>
-                                </a>
-                                </span>
-                                <span><a href="https://www.facebook.com"> <i class="fa fa-facebook-square" aria-hidden="true"></i> </a></span>
-                                <span> <a href="https://www.instagram.com"> <i class="fa fa-instagram" aria-hidden="true"></i> </a></span>
-                                <span> <a href="https://twitter.com"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a> </span>
+                                <span> <a href="contact.html"> <button type="button" class="knop"> <span>Contact</span>
+                                <i>class="fa fa-mobile" aria-hidden="true"></i>
+                                    </button>
+                                    </a>
+                                    </span>
+                                    <span><a href="https://www.facebook.com"> <i class="fa fa-facebook-square" aria-hidden="true"></i> </a></span>
+                                    <span> <a href="https://www.instagram.com"> <i class="fa fa-instagram" aria-hidden="true"></i> </a></span>
+                                    <span> <a href="https://twitter.com"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a> </span>
                         </div>
                     </footer>
 
