--- a/portfolio_affichedobber.html
+++ b/portfolio_affichedobber.html
@@ -95,8 +95,8 @@
                 <div class="sf-grid__column-xxsm-12">
                     <article class="centreer">
                         <h2 class="centreer">Publicatie opendeurdag dobber</h2>
-                         <img src="assets/images/Portfolio_webdesign/affiche_dobber.png" alt="portfolio item" width="60%">
-                        <img src="assets/images/Portfolio_webdesign/banner_dobber.png" alt="portfolio item" width="60%">
+                         <img src="assets/images/Portfolio_webdesign/affiche_dobber.jpg" alt="portfolio item" width="50%">
+                        <img src="assets/images/Portfolio_webdesign/banner_dobber.png" alt="portfolio item" width="50%">
 
                         <p class="centreer">Dit is een affiche en een banner gemaakt voor de opendeurdag van vissersclub Dobber.</p>
                         <br>
