--- a/portfolio_cover.html
+++ b/portfolio_cover.html
@@ -96,7 +96,7 @@
                 <div class="sf-grid__column-xxsm-12">
                     <article class="centreer">
                         <h2 class="centreer">Cover dieren</h2>
-                        <img src="assets/images/Portfolio_webdesign/Aa_DekockerNoa_Cover.png" alt="portfolio item" width="60%">
+                        <img src="assets/images/Portfolio_webdesign/Aa_DekockerNoa_Cover.jpg" alt="portfolio item" width="50%">
 
                         <p class="centreer">Dit is een boekcover.</p>
                         <br>
