--- a/portfolio_deksel.html
+++ b/portfolio_deksel.html
@@ -96,7 +96,7 @@
                 <div class="sf-grid__column-xxsm-12">
                     <article class="centreer">
                         <h2 class="centreer">Deksel memoriespel</h2>
-                        <img src="assets/images/Portfolio_webdesign/deksel_uitgewerkt_voorstel.png" alt="portfolio item" width="60%">
+                        <img src="assets/images/Portfolio_webdesign/deksel_uitgewerkt_voorstel.jpg" alt="portfolio item" width="50%">
 
                         <p class="centreer">Dit is het deksel van een memorie spel genaamd onderwaterwereld. Het spel bevat 4 vissen, 8 kaartjes in totaal.</p>
                         
