--- a/portfolio_header.html
+++ b/portfolio_header.html
@@ -97,8 +97,8 @@
                 <div class="sf-grid__column-xxsm-12">
                     <article class="centreer">
                         <h2 class="centreer">Header ommegang</h2>
-                        <img src="assets/images/Portfolio_webdesign/header_ommegang.png" alt="portfolio item" width="100%">
-                        <img src="assets/images/Portfolio_webdesign/ommegang_banner.png" alt="portfolio item" width="100%">
+                        <img src="assets/images/Portfolio_webdesign/header_ommegang.jpg" alt="portfolio item" width="80%">
+                        <img src="assets/images/Portfolio_webdesign/ommegang_banner.jpg" alt="portfolio item" width="80%">
 
                         <p class="centreer">Dit is een omslagfoto en een banner gemaakt voor de ommegang van de Chiro.</p>
                         <br>
