--- a/styleguide.html
+++ b/styleguide.html
@@ -213,7 +213,7 @@
           <article>
             <h4>Hover foto</h4>
             <figure class="team">
-              <img src="assets/images/Noa_vierkant.png" alt="team" height="300" width="300" />
+              <img src="assets/images/noa_vierkant.jpg" alt="team" height="300" width="300" />
 
               <img class="logo" src="assets/images/logo_groot_wit.png"></img>
             </figure>
