--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <div class="sf-grid__column-md-4">
                                 <article>
                                     <figure class="team">
-                                        <img src="assets/images/Noa_vierkant.png" alt="team" height="300" width="300" />
+                                        <img src="assets/images/noa_vierkant.jpg" alt="team" height="300" width="300" />
 
                                         <img class="logo" src="assets/images/logo_groot_wit.png"></img>
                                         <a href="#"></a>
@@ -176,7 +176,7 @@
                                 <article>
 
                                     <figure class="team">
-                                        <img src="assets/images/Mona_vierkant.png" alt="team" height="300" width="300" />
+                                        <img src="assets/images/mona_vierkant.jpg" alt="team" height="300" width="300" />
 
                                         <img class="logo" src="assets/images/logo_groot_wit.png"></img>
                                         <a href="#"></a>
@@ -189,9 +189,9 @@
                                 <article>
 
                                     <figure class="team">
-                                        <img src="assets/images/Leonie_vierkant.png" alt="team" height="300" width="300" /></img>
+                                        <img src="assets/images/leonie_vierkant.png" alt="team" height="300" width="300" /></img>
 
-                                        <img class="logo" src="assets/images/logo_groot_wit.png"></img>
+                                        <img class="logo" src="assets/images/logo_groot_wit.jpg"></img>
                                         <a href="#">
                                             <a href="#"></a>
                                     </figure>
