--- a/over_ons.html
+++ b/over_ons.html
@@ -117,7 +117,7 @@
                     <div class="sf-grid__column-md-4">
                         <article>
                             <figure class="team">
-                                <img src="assets/images/Noa_vierkant.png" alt="team" height="300" width="300" />
+                                <img src="assets/images/noa_vierkant.jpg" alt="team" height="300" width="300" />
 
                                 <img class="logo" src="assets/images/logo_groot_wit.png"></img>
                                 <a href="#"></a>
@@ -130,7 +130,7 @@
                     <div class="sf-grid__column-md-4">
                         <article>
                             <figure class="team">
-                                <img src="assets/images/Mona_vierkant.png" alt="team" height="300" width="300" />
+                                <img src="assets/images/mona_vierkant.jpg" alt="team" height="300" width="300" />
 
                                 <img class="logo" src="assets/images/logo_groot_wit.png"></img>
                                 <a href="#"></a>
@@ -144,7 +144,7 @@
                         <article>
 
                             <figure class="team">
-                                <img src="assets/images/Leonie_vierkant.png" alt="team" height="300" width="300" />
+                                <img src="assets/images/leonie_vierkant.jpg" alt="team" height="300" width="300" />
 
                                 <img class="logo" src="assets/images/logo_groot_wit.png"></img>
                                 <a href="#"></a>
