--- a/portfolio_fiche.html
+++ b/portfolio_fiche.html
@@ -95,7 +95,7 @@
                 <div class="sf-grid__column-xxsm-12">
                     <article class="centreer">
                         <h2 class="centreer">Technische fiche</h2>
-                        <img src="assets/images/Portfolio_webdesign/technischefiche.png" alt="portfolio item" width="100%">
+                        <img src="assets/images/Portfolio_webdesign/technischefiche.jpg" alt="portfolio item" width="70%">
 
                         <p class="centreer">Dit is een technische fiche voor een brommer uit een catalogus.</p>
                         <br>
