--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 <article>
 
                                     <figure class="team">
-                                        <img src="assets/images/leonie_vierkant.png" alt="team" height="300" width="300" /></img>
+                                        <img src="assets/images/leonie_vierkant.jpg" alt="team" height="300" width="300" /></img>
 
                                         <img class="logo" src="assets/images/logo_groot_wit.jpg"></img>
                                         <a href="#">
