--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                     <figure class="team">
                                         <img src="assets/images/leonie_vierkant.jpg" alt="team" height="300" width="300" /></img>
 
-                                        <img class="logo" src="assets/images/logo_groot_wit.jpg"></img>
+                                        <img class="logo" src="assets/images/logo_groot_wit.png"></img>
                                         <a href="#">
                                             <a href="#"></a>
                                     </figure>
