--- a/styleguide.html
+++ b/styleguide.html
@@ -279,36 +279,37 @@
   </div>
 
 
-  <!--footer-->
-  <div class="sf-grid__wrapper footer_wrapper">
-    <div class="sf-grid__container">
-      <div class="sf-grid__row">
-        <div class="sf-grid__column-xxsm-12">
+   <!--footer-->
+            <div class="sf-grid__wrapper footer_wrapper">
+                <div class="sf-grid__container">
+                    <div class="sf-grid__row">
+                        <div class="sf-grid__column-xxsm-12">
 
-          <footer class="footer">
-            <div>
+                            <footer class="footer">
+                                <div>
 
-              <p id="tekst_footer">
-                <span><i class="fa fa-mobile" aria-hidden="true"></i> 0471 32 56 11</span>
-                <span><i class="fa fa-envelope-o" aria-hidden="true"></i>dekockerdesign@gmail.com</span>
-                <span><i class="fa fa-map-marker" aria-hidden="true"></i>Nieuwstraat 22, 8792 Desselgem </span>
+                                    <p id="tekst_footer">
+                                        <span><i class="fa fa-mobile" aria-hidden="true"></i> 0471 32 56 11</span>
+                                        <span><i class="fa fa-envelope-o" aria-hidden="true"></i>dekockerdesign@gmail.com</span>
+                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i>Nieuwstraat 22, 8792 Desselgem </span>
 
 
-                <span> <a href="#"> <button type="button" class="knop"> <span>Contact</span><i class="fa fa-mobile" aria-hidden="true"></i>                </button>
-                </a>
-                </span>
-                <span><a href="https://www.facebook.com"> <i class="fa fa-facebook-square" aria-hidden="true"></i> </a></span>
-                <span> <a href="https://www.instagram.com"> <i class="fa fa-instagram" aria-hidden="true"></i> </a></span>
-                <span> <a href="https://twitter.com"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a></p> </span>
+                                        <span> <a href="contact.html"> <button type="button" class="knop"> <span>Contact</span>
+                                        <i class="fa fa-mobile" aria-hidden="true"></i>
+                                        </button>
+                                        </a>
+                                        </span>
+                                        <span><a href="https://www.facebook.com"> <i class="fa fa-facebook-square" aria-hidden="true"></i> </a></span>
+                                        <span> <a href="https://www.instagram.com"> <i class="fa fa-instagram" aria-hidden="true"></i> </a></span>
+                                        <span> <a href="https://twitter.com"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a> </span>
+                                </div>
+                            </footer>
+
+
+                        </div>
+                    </div>
+                </div>
             </div>
-          </footer>
-
-
-        </div>
-      </div>
-    </div>
-  </div>
-
 
 
 </body>
