--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,11 @@
 
 
                                 <span> <a href="contact.html"> <button type="button" class="knop"> <span>Contact</span>
-                                <i>class="fa fa-mobile" aria-hidden="true"></i>
+                                <i class="fa fa-mobile" aria-hidden="true"></i>
+                                    </button>
+                                    </a>
+                                    </span>
+
                                     </button>
                                     </a>
                                     </span>
